More efficient to use valueOf than the constructor.
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@639385 13f79535-47bb-0310-9956-ffa450edef68